initial location for my location

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
        <meta-data android:name="com.google.android.geo.API_KEY"
-           android:value="#your api key"/>
+           android:value="AIzaSyBfdUvFcmEL1Uab9tnZj0uSiIeSlxvoOqg"/>
     </application>
 </manifest>
