--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,22 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   get: ^4.3.8
+  firebase_core: ^1.6.0
+  firebase_messaging: ^10.0.7
 
   #map
   google_maps_flutter: ^2.0.3
 
   location: ^4.1.1
   flutter_screenutil: ^5.0.0
+  flutter_local_notifications: ^8.2.0
+  http: ^0.13.0
 
 
 
 
-  # get: ^4.1.4
+
+
 
 
 
