--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
   get: ^4.3.8
   firebase_core: ^1.6.0
   firebase_messaging: ^10.0.7
+  cloud_firestore: ^2.5.2
+
+  device_info_plus: ^2.0.1
+  dart_ipify: ^1.1.0
+
+
 
   #map
   google_maps_flutter: ^2.0.3
@@ -39,8 +45,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - asset/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
